
Thu Dec 13 20:22:18 CET 2001 Paolo Molaro <lupus@ximian.com>

	* DllImportAttribute.cs: added.
	* MethodImplOptions.cs: removed: this is already in CompilerServices.

Wed Nov 14 17:02:57 CET 2001 Paolo Molaro <lupus@ximian.com>

	* CallingConvention.cs: add missing Winapi.

2001-07-20  Miguel de Icaza  <miguel@ximian.com>

	* OutAttribute.cs: New file.

2001-07-18  Michael Lambert <michaellambert@email.com>

	* CallingConvention.cs.cs, CharSet.cs, GCHandleType.cs, LayoutKind.cs: Add.