@@ -1,0 +1,8 @@
+using System;
+
+namespace System.Runtime.InteropServices {
+	public sealed class OptionalAttribute : Attribute {
+		public OptionalAttribute () {
+		}
+	}
+}
